# otus_django_tutorial

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  postgres_init.sql  postgres_init_dev.sql  postgres_init_prod.sql  pyproject.toml
.github/workflows/: ci.yml
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_rename_choise_choice_and_more.py
mysite/polls/static/polls/: style.css
mysite/polls/templates/polls/: detail.html  index.html
