[tool.poetry]
name = "otus-django-tutorial"
version = "0.1.0"
description = ""
authors = ["Aleksandr <gggols32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
