[tool.poetry]
name = "otus-django-tutorial"
version = "0.1.0"
description = ""
authors = ["Aleksandr <gggols32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"
black = "^24.10.0"
isort = "^5.13.2"
pyupgrade = "^3.19.0"
ruff = "^0.8.2"
pre-commit = "^4.0.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
